force-app/main/default/objects/Settings__c/Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ISV Cockpit Settings</label>
</CustomObject>