force-app/main/default/objects/Settings__c/fields/txt_OpenAiApiKey__c.field-meta.xml
<CustomField>
    <fullName>txt_OpenAiApiKey__c</fullName>
    <label>OpenAI API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>