force-app/main/default/objects/Settings__c/fields/txt_SlackChannel__c.field-meta.xml
<CustomField>
    <fullName>txt_SlackChannel__c</fullName>
    <label>Slack Notification Channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>